--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -1,7 +1,7 @@
 
-input{
+#searchBox{
     font-size: 20px;
     margin-left: 580px;
-    margin-top: 10px;
-    padding-bottom: 3px;
+    margin-bottom: 30px;
+    padding-bottom: 5px;
 }
